kubernetes/min.io/001_minio-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: minio  
  name: minio
  namespace: default 
spec:
  containers:
  - name: minio
    image: quay.io/minio/minio:latest
    command:
    - /bin/bash
    - -c
    args: 
    - minio server /data --console-address :9001
    volumeMounts:
    - mountPath: /data
      name: localvolume 
  volumes:
  - name: localvolume
    hostPath: 
      path: /mnt/disk1/data 
      type: DirectoryOrCreate
