kubernetes/min.io/002_minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deployment
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: minio-pv-claim
      containers:
      - name: minio
        image: minio/minio:latest
        args:
        - server
        - /data
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: data
          mountPath: "/data"
        readinessProbe:
          httpGet:
            path: /minio/health/ready
            port: 9000
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000        
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "0.5"
            memory: "512Mi"
