kubernetes/min.io/002_minio-network.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  selector:
    app: minio
  ports:
    - name: data
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: ui
      protocol: TCP
      port: 9001
      targetPort: 9001
  type: ClusterIP

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - gh-gateway
  http:
    - match:
        - uri:
            prefix: /smm/
      rewrite:
        uri: "/"
      route:
        - destination:
            host: minio-service.default.svc.cluster.local
            port:
              number: 9001
